--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <input type="file" id="srcFile" name="srcFile" accept="text/plain">
     <button id="downloadButton">Download as ZIP</button>
 
-    <script src="./target/scala-3.2.2/scalajs-bundler/main/app-fastopt-bundle.js"></script>
+    <!-- <script src="./target/scala-3.2.2/scalajs-bundler/main/app-fastopt-bundle.js"></script> -->
     <!-- <script src="./target/scala-3.2.2/scalajs-bundler/main/app-opt-bundle.js"></script>  -->
-    <!-- <script src="./app-opt-bundle.js"></script>     -->
+    <script src="./app-opt-bundle.js"></script>    
 
 </body>
 
