--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Text splitter</h1>
     <p></p>
-    <label for="wordsPerPage">Words per page:</label>
+    <label for="wordsPerPage">Characters per page:</label>
     <input type="text" id="wordsPerPage" name="wordsPerPage" required minlength="1" maxlength="8" size="10">
     <p></p>
 
@@ -30,8 +30,8 @@
     <input type="file" id="srcFile" name="srcFile" accept="text/plain">
     <p></p>
     <button id="downloadButton">Download as ZIP</button>
-    <script src="./target/scala-3.2.2/scalajs-bundler/main/app-fastopt-bundle.js"></script>
-    <!-- <script src="./target/scala-3.2.2/scalajs-bundler/main/app-opt-bundle.js"></script>  -->
+    <!-- <script src="./target/scala-3.3.3/scalajs-bundler/main/app-fastopt-bundle.js"></script> -->
+    <script src="./target/scala-3.3.3/scalajs-bundler/main/app-opt-bundle.js"></script> 
     <!-- <script src="./app-opt-bundle.js"></script>     -->
 
 </body>
