--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <p></p>
     <button id="downloadButton">Download as ZIP</button>
     <!-- <script src="./target/scala-3.3.3/scalajs-bundler/main/app-fastopt-bundle.js"></script> -->
-    <script src="./target/scala-3.3.3/scalajs-bundler/main/app-opt-bundle.js"></script> 
-    <!-- <script src="./app-opt-bundle.js"></script>     -->
+    <!-- <script src="./target/scala-3.3.3/scalajs-bundler/main/app-opt-bundle.js"></script>  -->
+    <script src="./app-opt-bundle.js"></script>    
 
 </body>
 
